--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,18 @@
+asgiref==3.8.1
 Django==3.2.3
+django-cors-headers==3.13.0
 djangorestframework==3.12.4
+flake8==6.0.0
+flake8-isort==6.0.0
+isort==5.13.2
+mccabe==0.7.0
 djoser==2.1.0
 webcolors==1.11.1
 psycopg2-binary==2.9.3
+pycodestyle==2.10.0
+pytz==2024.1
+sqlparse==0.5.1
+typing_extensions==4.12.2
 Pillow==9.0.0
 pytest==6.2.4
 pytest-django==4.4.0
