--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Main Taski workflow
 on:
   push:
     branches:
-      - main
+      - '*'
 
 jobs:
   tests:
@@ -46,6 +46,7 @@ jobs:
           python manage.py test
 
   build_and_push_to_docker_hub:
+    if: github.ref_name == 'main'
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -67,7 +68,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: domenen/kittygram_backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -90,6 +91,7 @@ jobs:
         npm run test
 
   build_frontend_and_push_to_docker_hub:
+    if: github.ref_name == 'main'
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
@@ -108,9 +110,10 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: domenen/kittygram_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend:latest
 
   build_gateway_and_push_to_docker_hub:
+    if: github.ref_name == 'main'
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
     steps:
@@ -128,9 +131,10 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: domenen/kittygram_gateway:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway:latest
 
   deploy:
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs:
       - build_and_push_to_docker_hub
@@ -157,14 +161,15 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd kittygram
-          sudo docker compose -f docker-compose.yml pull
-          sudo docker compose -f docker-compose.yml down
-          sudo docker compose -f docker-compose.yml up -d
-          sudo docker compose -f docker-compose.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          sudo docker compose -f docker-compose.production.yml pull
+          sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml up -d
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
 
   send_message:
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -173,4 +178,5 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!
+        message: Новый деплой от (github.actor), коммит - (github.event.commits[0].message)
+
