--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
 
@@ -14,22 +15,28 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   backend:
-    image: domenen/kittygram_backend
+    depends_on: 
+      - db
+    build: /backend/
     env_file: .env
     volumes:
       - static:/backend_static
+      - media:/app/media
 
   frontend:
     env_file: .env
-    image: domenen/kittygram_frontend
+    build: /frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
 
   gateway:
-
-    image: domenen/kittygram_gateway
+    depends_on:
+      - backend
+      - frontend
+    build: /nginx/
     volumes:
       - static:/staticfiles/
+      - media:/app/media
     ports:
       - 9000:80
