--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,22 @@
 server {
   listen 80;
+  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
+    client_max_body_size 20M;
   }
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
+  location /media/ {
+      alias /var/www/kittygram/media/;
+      autoindex on;
+  }
 
   location / {
-
     alias /staticfiles/;
     index index.html;
   }
