--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,8 @@ server {
     proxy_pass http://backend:8000/admin/;
   }
   location /media/ {
-      alias /var/www/kittygram/media/;
-      autoindex on;
+      alias /media/;
+      try_files $uri $uri/ /index.html;
   }
 
   location / {
