--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,5 +178,5 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Новый деплой от (github.actor), коммит - (github.event.commits[0].message)
+        message: Новый деплой от ${{ github.actor }}, коммит - ${{ github.event.commits[0].message }}
 
