--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ server {
   location /media/ {
       alias /media/;
       try_files $uri $uri/ /index.html;
+      client_max_body_size 20M;
   }
 
   location / {
