--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,6 +4,7 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
 
@@ -19,15 +20,15 @@ services:
     image: domenen/kittygram_backend
     env_file: .env
     volumes:
-      - static:/backend_static
-      - media:/app/media
+      - static:/backend_static/
+      - media:/media/
 
   frontend:
     env_file: .env
     image: domenen/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static
+      - static:/frontend_static/
 
   gateway:
     depends_on:
@@ -36,6 +37,6 @@ services:
     image: domenen/kittygram_gateway
     volumes:
       - static:/staticfiles/
-      - media:/app/media
+      - media:/media/
     ports:
       - 9000:80
