--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -21,7 +21,7 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static/
-      - media:/media/
+      - media:/media
 
   frontend:
     env_file: .env
@@ -37,6 +37,6 @@ services:
     image: domenen/kittygram_gateway
     volumes:
       - static:/staticfiles/
-      - media:/media/
+      - media:/media
     ports:
       - 9000:80
