--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -20,8 +20,8 @@ services:
     image: domenen/kittygram_backend
     env_file: .env
     volumes:
-      - static:/backend_static/
-      - media:/media
+      - static:/backend_static/static/
+      - media:/app/media/
 
   frontend:
     env_file: .env
@@ -37,6 +37,6 @@ services:
     image: domenen/kittygram_gateway
     volumes:
       - static:/staticfiles/
-      - media:/media
+      - media:/app/media/
     ports:
       - 9000:80
