--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -20,7 +20,7 @@ services:
     image: domenen/kittygram_backend
     env_file: .env
     volumes:
-      - static:/backend_static/static/
+      - static:/backend_static/
       - media:/app/media/
 
   frontend:
@@ -37,6 +37,6 @@ services:
     image: domenen/kittygram_gateway
     volumes:
       - static:/staticfiles/
-      - media:/app/media/
+      - media:/media/
     ports:
       - 9000:80
