--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,3 @@
-version: '3'
-
-
 volumes:
   pg_data:
   static:
@@ -20,15 +17,15 @@ services:
     image: domenen/kittygram_backend
     env_file: .env
     volumes:
-      - static:/backend_static/
-      - media:/media/
+      - static:/backend_static
+      - media:/app/media
 
   frontend:
     env_file: .env
     image: domenen/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static/
+      - static:/frontend_static
 
   gateway:
     depends_on:
@@ -36,7 +33,7 @@ services:
       - frontend
     image: domenen/kittygram_gateway
     volumes:
-      - static:/staticfiles/
-      - media:/media/
+      - static:/staticfiles
+      - media:/app/media
     ports:
       - 9000:80
