--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 80;
   server_tokens off;
+  index index.html;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -12,12 +13,12 @@ server {
     proxy_pass http://backend:8000/admin/;
   }
   location /media/ {
-      alias /media/;
+      alias /app/media/;
       client_max_body_size 20M;
   }
 
   location / {
     alias /staticfiles/;
-    index index.html;
+    try_files $uri $uri/ /index.html
   }
 }
