--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,6 @@ server {
 
   location / {
     alias /staticfiles/;
-    try_files $uri $uri/ /index.html
+    try_files $uri $uri/ /index.html;
   }
 }
